2022-01-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_try_catch_stmt): Fix
	diagnostics.
	* testsuite/poke.pkl/try-catch-diag-4.pk: Update expected error.
	* testsuite/poke.pkl/try-catch-diag-5.pk: Likewise.

2022-01-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_try_until_stmt): Fix
	diagnostics.
	* testsuite/poke.pkl/try-until-diag-1.pk: Update expected error.

2022-01-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_print_stmt): Fix
	diagnostics.
	* testsuite/poke.pkl/print-diag-1.pk: Update expected error.

2022-01-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_format): Improve
	diagnostics.
	* testsuite/poke.pkl/printf-diag-18.pk: Adapt expected error.

2022-01-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_loop_stmt): Improve
	diagnostics.
	(pkl_typify1_ps_loop_stmt_iterator): Likewise.
	* testsuite/poke.pkl/for-diag-1.pk: Update expected error.
	* testsuite/poke.pkl/for-diag-2.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2022-01-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_incrdecr): Improve
	diagnostics.
	* testsuite/poke.pkl/postincr-diag-1.pk: Update expected error.
	* testsuite/poke.pkl/postincr-diag-3.pk: Likewise.
	* testsuite/poke.pkl/postincr-diag-2.pk: Likewise.
	* testsuite/poke.pkl/postincr-diag-4.pk: Likewise.
	* testsuite/poke.pkl/preincr-diag-2.pk: Likewise.
	* testsuite/poke.pkl/preincr-diag-1.pk: Likewise.

2022-01-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_map): Improve diagnostics.
	* testsuite/poke.pkl/map-diag-6.pk: New test.
	* testsuite/poke.pkl/map-ios-diag-1.pk: Update expected error.
	* testsuite/poke.pkl/map-ios-diag-2.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2022-01-20  Jose E. Marchesi  <jemarch@gnu.org>
